# FileCataloger

./: .editorconfig  .env.example  .eslintrc.js  .eslintrc.json  .gitconfig.local  .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc.json  .release-please-manifest.json  AI_COMPONENT_TODO.md  AI_RENAMING_MODULE_IMPLEMENTATION.md  ARCHITECTURE_DIAGRAM.md  BEST_PRACTICES_ASSESSMENT.md  CHANGELOG.md  CHANGELOG_GUIDE.md  CHANGES.md  CLAUDE.md  CODE.md  CODE_REVIEW_QUICK_START.md  CONTRIBUTING.md  Claude.md  DEBUG.md  DEBUG_DRAG_SHAKE_BROKEN_FIX.md  DEBUG_NOTES.md  DROPOVER_RESEARCH_REPORT.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_RECOMMENDATIONS.md  LICENSE  MIGRATION_GUIDE.md  NATIVE_MODULE_FIX_DOCUMENTATION.md  OPTIMIZATION_PLAN.md  PLUGIN_IMPLEMENTATION_MODULES.md  PLUGIN_INSTALLATION_PLAN.md  PRD.md  README.md  SPACEDRIVE_ARCHITECTURE_REFERENCE.md  STAGE_1_TO_4_COMPLETION_SUMMARY.md  TODO_CHECKLIST.md  WINDOW_ARCHITECTURE_GUIDE.md  (+20 more)
.changeset/: config.json
.claude/: README.md
.github/: OPEN_SOURCE_CHECKLIST.md  PULL_REQUEST_TEMPLATE.md  README.md  SETUP_SECRETS.md  WORKFLOWS.md  dependabot.yml
.husky/: commit-msg  pre-commit  pre-push  pre-stage
DEBUG_LOG/: CODEBASE_ANALYSIS.md  OPTIMIZATION_PLAN.md  WORKFLOW_DIAGRAM.md
assets/: icon.icns
config/: .lintstagedrc.json  commitlint.config.js  postcss.config.js  tsconfig.base.json  tsconfig.main.json  tsconfig.renderer.json  typedoc.json
doc/: CODING_NOTES.md  DEBUG_JOURNEY_SUMMARY.md  DEBUG_NATIVE_MODULE_LOADING.md  DEBUG_SHELF_PERSISTENCE_COMPLETE.md  DEBUG_SUMMARY.md  (+4 more)
src-tauri/: .clippy.toml  Cargo.toml  rustfmt.toml  tauri.conf.json
(+527 files in other folders)
